--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         <div class="items">
           <div class="item">         
             <img v-bind:src="movies.image[attiva]" alt="">
+            <div class="info">
+              <h3>{{movies.title[attiva]}}</h3>
+              <p>{{movies.text[attiva]}}</p>
+            </div>
           </div>
         </div>
         <div class="thumbs">
